  See menu File --> Find Preference

Update Commons Lang library to version 3.12.0,
  see https://commons.apache.org/proper/commons-lang/

Main application toolbar: Replaced the former Aliases and Session combo boxes by toolbar buttons
  which display popup menus to select Aliases and Session respectively.

Removed dependencies on outdated Hibernate libraries (3.2.4.sp1).


Bug fixes:

Code completion: Fixed/improved completion for double quoted (") identifiers, e.g. schemas, tables, columns.

Change tracking, left gutter popup to show changes:
  Fixed Nullpointer when popup was too long.

#1502 MAC OS: Made some standard navigation keyboard short cuts available for configuration.
  See menu File --> Global Preferences --> tab Keyboard shortcuts,
  entries caret-begin, caret-begin-line, caret-end, caret-end-line

#1505 Improved/fixed schema qualifying for scripting function.
  Note: To configure qualifying see menu File --> Global Preferences --> tab SQL Scripts

Current schema panel at the right of Session's status bar:
  Made setting the current schema work when query connection pool is used.

Plain SQL editor: Fixed ClassCastException when code completion was used.
  See menu File --> New Session Properties --> top of tab Syntax

Made undo (ctrl+Z) and redo (ctrl+R) available for the plain SQL editor, too.
  See menu File --> New Session Properties --> top of tab Syntax

Made undo (ctrl+Z) and redo (ctrl+R) shortcuts changeable
  at menu File --> Global Preferences --> tab Keyboard shortcuts.

Tools popup (ctrl+T) was far to wide because of too long description text.

#1502 MAC OS with Metal Look and Feel:
  Standard keyboard shortcuts (cut, copy, paste) of simple text fields where changed from ctrl+X/C/V to command+X/C/V.
  Note: If you use Mac with Windows keyboard the command key is mapped to the Windows key.

Hibernate Plugin: Fixed NullPointer for mapped collections of type javax.persistence.ElementCollection.
