@@ -23,6 +23,7 @@ import net.sourceforge.squirrel_sql.client.session.DataModelImplementationDetail
 import net.sourceforge.squirrel_sql.fw.datasetviewer.ColumnDisplayDefinition;
 import net.sourceforge.squirrel_sql.fw.datasetviewer.ExtTableColumn;
 import net.sourceforge.squirrel_sql.fw.gui.ClipboardUtil;
+import net.sourceforge.squirrel_sql.fw.sql.SqlScriptPluginAccessor;
 import net.sourceforge.squirrel_sql.fw.util.ICommand;
 
 import javax.swing.JTable;
@@ -118,7 +119,7 @@ public class TableCopyInsertStatementCommand extends TableCopySqlPartCommandBase
 
             Object cellObj = _table.getValueAt(selRows[rowIdx], selCols[colIdx]);
 
-            colNames.append(colDef.getColumnName());
+            colNames.append(SqlScriptPluginAccessor.formatColumnName(colDef.getColumnName()));
             vals.append(getData(colDef, cellObj, StatType.IN));
          }
 
