@@ -23,6 +23,7 @@ import net.sourceforge.squirrel_sql.client.session.DataModelImplementationDetail
 import net.sourceforge.squirrel_sql.fw.datasetviewer.ColumnDisplayDefinition;
 import net.sourceforge.squirrel_sql.fw.datasetviewer.ExtTableColumn;
 import net.sourceforge.squirrel_sql.fw.gui.ClipboardUtil;
+import net.sourceforge.squirrel_sql.fw.sql.SqlScriptPluginAccessor;
 import net.sourceforge.squirrel_sql.fw.util.ICommand;
 
 import javax.swing.JTable;
@@ -113,7 +114,7 @@ public class TableCopyUpdateStatementCommand extends TableCopySqlPartCommandBase
             }
 
             final Object cellObj = _table.getValueAt(selRows[rowIdx], selCols[colIdx]);
-            setListBuf.append(colDef.getColumnName()).append(getData(colDef, cellObj, StatType.UPDATE));
+            setListBuf.append(SqlScriptPluginAccessor.formatColumnName(colDef.getColumnName())).append(getData(colDef, cellObj, StatType.UPDATE));
          }
 
          tableNameProvider.colDefsFinished();
