@@ -2,6 +2,7 @@ package net.sourceforge.squirrel_sql.fw.sql.querytokenizer;
 
 
 import net.sourceforge.squirrel_sql.fw.sql.ITableInfo;
+import net.sourceforge.squirrel_sql.fw.sql.TableColumnInfo;
 
 public interface ScriptPluginInterface
 {
@@ -10,4 +11,8 @@ public interface ScriptPluginInterface
    String formatTableName(ITableInfo tInfo);
 
    boolean isQualifyTableRequired();
+
+   String formatColumnName(TableColumnInfo tcInfo);
+
+   String formatColumnName(String columnName);
 }
