@@ -2,6 +2,7 @@ package net.sourceforge.squirrel_sql.plugins.sqlscript;
 
 import net.sourceforge.squirrel_sql.client.session.ISession;
 import net.sourceforge.squirrel_sql.fw.sql.ITableInfo;
+import net.sourceforge.squirrel_sql.fw.sql.TableColumnInfo;
 import net.sourceforge.squirrel_sql.plugins.sqlscript.table_script.CreateTableScriptCommand;
 import net.sourceforge.squirrel_sql.plugins.sqlscript.table_script.ScriptUtil;
 
@@ -35,5 +36,14 @@ public class SQLScriptExternalService
       return ScriptUtil.isQualifyTableRequired();
    }
 
+   public String formatColumnName(TableColumnInfo tcInfo)
+   {
+      return ScriptUtil.getColumnName(tcInfo);
+   }
+
+   public String formatColumnName(String columnName)
+   {
+      return ScriptUtil.getColumnName(columnName);
+   }
 
 }
